k8sService.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-service
spec:
  type: ClusterIP
  selector:
    app: member-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
